CTMS-16-Fixed screen layout issues for smaller screens.

--- a/app/src/app/stores/stores.component.less
+++ b/app/src/app/stores/stores.component.less
@@ -82,7 +82,7 @@
         border-radius: 5px;
         box-shadow: 0 0 10px #dcdce2;
         display: grid;
-        grid-template-columns: 280px 280px;
+        grid-template-columns: 50% 50%;
         grid-template-rows: 70px 176px 40px;
 
         #store-address-tbl{
@@ -162,7 +162,7 @@
         border-radius: 5px;
         box-shadow: 0 0 10px #dcdce2;
         display: grid;
-        grid-template-columns: 280px 280px;
+        grid-template-columns: 50% 50%;
         >div{
             color: #26377B; 
             font-family: 'Lato',Arial,sans-serif;
